--- a/Experiments/plotting/figures/Exp6_read_memory.tex
+++ b/Experiments/plotting/figures/Exp6_read_memory.tex
@@ -84,7 +84,7 @@
 			ylabels at=edge left,
 			horizontal sep=2pt,
 			vertical sep=0pt,
-			/pgf/bar width=10pt
+			/pgf/bar width=12pt
 		},			
 		axis line style={gray},
 		ybar stacked,        
@@ -100,9 +100,9 @@
 		xtick align=outside,			
 		xtick pos=left,
 		ytick pos=left,
-		yticklabel style = {font=\footnotesize},
-		ylabel style = {yshift=-12pt},
-		xticklabel style = {font=\footnotesize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
+		yticklabel style = {font=\scriptsize},
+		ylabel style = {yshift=-5pt},
+		xticklabel style = {font=\scriptsize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
 		x label style={yshift=-20pt},
 		xtick=data,
 		height=0.4\columnwidth,  
@@ -121,14 +121,14 @@
 		legend image code/.code={\draw [#1] (0cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{0.27\textwidth}{{enlarge x limits=0.15,}}{{0,16,32,48,64,80,96,112,128}}{{0,16,32,48,64,80,96,112,128}};	
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
+\addDiagramExpOne{CPP}{0.35\textwidth}{{enlarge x limits=0.15,}}{{0,16,32,48,64,80,96,112,128}}{{0,16,32,48,64,80,96,112,128}};	
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.25\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
-\addDiagramExpOne{Rust}{0.22\textwidth}{{enlarge x limits=0.18,}}{{0,16,32,48,64,80,96,112,128}}{{}};
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
+\addDiagramExpOne{Rust}{0.30\textwidth}{{enlarge x limits=0.18,}}{{0,16,32,48,64,80,96,112,128}}{{}};
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.214\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
 
-\addDiagramExpOne{Java}{0.30\textwidth}{{enlarge x limits=0.10,}}{{0,16,32,48,64,80,96,112,128}}{{}};
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.2\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
+\addDiagramExpOne{Java}{0.38\textwidth}{{enlarge x limits=0.10,}}{{0,16,32,48,64,80,96,112,128}}{{}};
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.28\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
 
 
 \end{groupplot}
