--- a/Experiments/plotting/exp_2_legend.tex
+++ b/Experiments/plotting/exp_2_legend.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,3p,12pt]{elsarticle}
+\documentclass[3p,times,procedia]{elsarticle}
 \input{setting_main.tex}
 \pgfplotsset{compat=1.9}
 %\pgfplotsset{compat=1.12}
