--- a/Experiments/plotting/exp_4.tex
+++ b/Experiments/plotting/exp_4.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,3p,12pt]{elsarticle}
+\documentclass[3p,times,procedia]{elsarticle}
 \input{setting_main.tex}
 
 \begin{document}
