change font size

--- a/Experiments/plotting/figures/Exp2_legend_single.tex
+++ b/Experiments/plotting/figures/Exp2_legend_single.tex
@@ -7,7 +7,7 @@
     ymax=0.4, 
     legend columns=5,
     legend style={draw=white!15!black,legend cell align=left},
-    legend style={draw=none, nodes={scale=1.2, transform shape,}, font=\large},    
+    legend style={draw=none, nodes={scale=1.2, transform shape,}, font=\LARGE},    
     legend image post style={line width=1.5pt,scale=1.7},
     legend cell align={left},   
     /tikz/every even column/.append style={column sep=3em},
